# GCP_Big_Query_Data_Ingestion_Different_methodology

./: Dashboard_app.py  GCP_Delta_Ingestion_Framework_Report.docx  README_v2.md  architecture_possible.html  architecture_possible.md
Architecture Final/: GCP_Delta_Ingestion_Framework.html  GCP_Delta_Ingestion_Framework.md  LLD_Final_BQ_DBT.html
BQ_Framework_Ingestion/: README.md  audit_writer.py  bq_client.py  config_loader.py  delta_detector.py  delta_ingestion_dag.py  dq_validator.py  framework_schema.sql  ingestion_engine.py  pipeline_runner.py  process_control.py  register_table_sample.sql
bq-delta-framework_V2/: Dockerfile  pyproject.toml
bq-delta-framework_V2/dags/: bq_delta_ingestion_dag.py
bq-delta-framework_V2/dashboard/: app.py
bq-delta-framework_V2/framework/: __init__.py  audit_logger.py  config_loader.py  delta_detector.py  dq_validator.py  exceptions.py  ingestion_engine.py  pipeline_runner.py  quarantine_manager.py  watermark_manager.py
bq-delta-framework_V2/infra/bq/: __init__.py  bootstrap.py
bq-delta-framework_V2/infra/deploy/: cloudbuild.yaml  service.yaml
bq-delta-framework_V2/tests/: test_pipeline.py
